Actualizacion de version 0.1

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&#127909 Multicines La Palma &#127915</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
     <div id="web">
 
         <div id="head">
-            <a class="titulo" href="./Cartelera.html">
-                <h1><img src="../RESOURCES/IMG/La Palma.png" alt="La Palma">Multicines La Palma<img
-                        src="../RESOURCES/IMG/La Palma.png" alt="La Palma"></h1>
+            <a class="titulo" href="./HTML/Cartelera.html">
+                <h1><img src="./RESOURCES/IMG/La Palma.png" alt="La Palma">Multicines La Palma<img
+                        src="./RESOURCES/IMG/La Palma.png" alt="La Palma"></h1>
             </a>
             <nav class="horas">
-                <a href="./Cartelera.html">Cartelera</a>
-                <a href="./Menus.html">Promociones y menús</a>
-                <a href="./Contactanos.html">Contáctanos</a>
+                <a href="./HTML/Cartelera.html">Cartelera</a>
+                <a href="./HTML/Menus.html">Promociones y menús</a>
+                <a href="./HTML/Contactanos.html">Contáctanos</a>
             </nav>
         </div>
 
@@ -28,63 +28,63 @@
         <div id="cartelera">
             <div>
                 <section class="mario">
-                    <a id="mario" href="./Mario.html"><img src="../RESOURCES/IMG/mario.jpg" alt="Super Mario">
-                        <img class="png" src="../RESOURCES/IMG/mario.png" alt="Mario png"></a>
+                    <a id="mario" href="./HTML/Mario.html"><img src="./RESOURCES/IMG/mario.jpg" alt="Super Mario">
+                        <img class="png" src="./RESOURCES/IMG/mario.png" alt="Mario png"></a>
                 </section>
                 <section class="horas">
-                    <a href="./Mario.html">16:30</a>
-                    <a href="./Mario.html">18:10</a>
-                    <a href="./Mario.html">19:30</a>
+                    <a href="./HTML/Mario.html">16:30</a>
+                    <a href="./HTML/Mario.html">18:10</a>
+                    <a href="./HTML/Mario.html">19:30</a>
                 </section>
             </div>
             <div>
                 <section class="dragones">
-                    <a id="dragones" href="./Dragones.html"><img src="../RESOURCES/IMG/dragones.jpg"
+                    <a id="dragones" href="./HTML/Dragones.html"><img src="./RESOURCES/IMG/dragones.jpg"
                             alt="Dungeons and dragons">
-                        <img class="png" src="../RESOURCES/IMG/dragon.png" alt="dragon png"></a>
+                        <img class="png" src="./RESOURCES/IMG/dragon.png" alt="dragon png"></a>
                 </section>
                 <section class="horas">
-                    <a href="./Dragones.html">17:00</a>
-                    <a href="./Dragones.html">20:10</a>
+                    <a href="./HTML/Dragones.html">17:00</a>
+                    <a href="./HTML/Dragones.html">20:10</a>
                 </section>
             </div>
             <div>
                 <section class="exorcista">
-                    <a id="exorcista" href="./Exorcista.html"><img src="../RESOURCES/IMG/exorcista.jpg"
+                    <a id="exorcista" href="./HTML/Exorcista.html"><img src="./RESOURCES/IMG/exorcista.jpg"
                             alt="El exorcista del Papa">
-                        <img class="png" src="../RESOURCES/IMG/papa.png" alt="papa png"></a>
+                        <img class="png" src="./RESOURCES/IMG/papa.png" alt="papa png"></a>
                 </section>
                 <section class="horas">
-                    <a href="./Exorcista.html">22:15</a>
+                    <a href="./HTML/Exorcista.html">22:15</a>
                 </section>
             </div>
             <div>
                 <section class="sesenta">
-                    <a id="sesenta" href="./65.html"><img src="../RESOURCES/IMG/65.jpg" alt="65">
-                        <img class="png" src="../RESOURCES/IMG/dino.png" alt="dino png"></a>
+                    <a id="sesenta" href="./HTML/65.html"><img src="./RESOURCES/IMG/65.jpg" alt="65">
+                        <img class="png" src="./RESOURCES/IMG/dino.png" alt="dino png"></a>
                 </section>
                 <section class="horas">
-                    <a href="./65.html">16:45</a>
-                    <a href="./65.html">22:30</a>
+                    <a href="./HTML/65.html">16:45</a>
+                    <a href="./HTML/65.html">22:30</a>
                 </section>
             </div>
             <div>
                 <section class="jhon">
-                    <a id="jw4" href="./John.html"><img src="../RESOURCES/IMG/jhonwick.jpg" alt="Jhon Wick 4">
-                        <img class="png" src="../RESOURCES/IMG/Jhon.png" alt="john png"></a>
+                    <a id="jw4" href="./HTML/John.html"><img src="./RESOURCES/IMG/jhonwick.jpg" alt="Jhon Wick 4">
+                        <img class="png" src="./RESOURCES/IMG/Jhon.png" alt="john png"></a>
                 </section>
                 <section class="horas">
-                    <a href="./John.html">19:20</a>
-                    <a href="./John.html">21:30</a>
+                    <a href="./HTML/John.html">19:20</a>
+                    <a href="./HTML/John.html">21:30</a>
                 </section>
             </div>
             <div>
                 <section class="oso">
-                    <a id="oso" href="./Oso.html"><img src="../RESOURCES/IMG/oso.jpg" alt="Cocaine Beard">
-                        <img class="png" src="../RESOURCES/IMG/oso1.png" alt="oso png"></a>
+                    <a id="oso" href="./HTML/Oso.html"><img src="./RESOURCES/IMG/oso.jpg" alt="Cocaine Beard">
+                        <img class="png" src="./RESOURCES/IMG/oso1.png" alt="oso png"></a>
                 </section>
                 <section class="horas">
-                    <a href="./Oso.html">18:25</a>
+                    <a href="./HTML/Oso.html">18:25</a>
                 </section>
             </div>
         </div>
