--- a/HTML/Menus.html
+++ b/HTML/Menus.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,6 @@
 
 <body>
     <div id="web">
-
         <div id="head">
             <a href="./Cartelera.html">
                 <h1><img src="../RESOURCES/IMG/La Palma.png" alt="La Palma">Multicines La Palma<img
@@ -29,16 +27,16 @@
             <div class="carousel">
                 <div class="carouselSlider">
                     <div class="grupo1">
-                        <img src="../RESOURCES/IMG/promo1.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo2.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo3.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo4.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo5.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo1.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo2.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo3.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo4.jpg" alt="">
-                        <img src="../RESOURCES/IMG/promo5.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo1.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo2.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo3.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo4.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo5.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo1.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo2.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo3.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo4.jpg" alt="">
+                        <img class="" src="../RESOURCES/IMG/promo5.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -49,16 +47,16 @@
             <div class="carousel">
                 <div class="carouselSlider">
                     <div class="grupo1">
-                        <img src="../RESOURCES/IMG/Palomitas1.gif" alt="">
-                        <img src="../RESOURCES/IMG/Cola1.gif" alt="">
-                        <img src="../RESOURCES/IMG/MenuPoP.gif" alt="">
-                        <img src="../RESOURCES/IMG/sprite.gif" alt="">
-                        <img src="../RESOURCES/IMG/palomitas-5.gif" alt="">
-                        <img src="../RESOURCES/IMG/Palomitas1.gif" alt="">
-                        <img src="../RESOURCES/IMG/Cola1.gif" alt="">
-                        <img src="../RESOURCES/IMG/MenuPoP.gif" alt="">
-                        <img src="../RESOURCES/IMG/sprite.gif" alt="">
-                        <img src="../RESOURCES/IMG/palomitas-5.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/Palomitas1.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/Cola1.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/MenuPoP.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/sprite.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/palomitas-5.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/Palomitas1.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/Cola1.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/MenuPoP.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/sprite.gif" alt="">
+                        <img class="" src="../RESOURCES/IMG/palomitas-5.gif" alt="">
                     </div>
                 </div>
             </div>
@@ -78,6 +76,4 @@
                 href="http://creativecommons.org/licenses/by-nc-nd/4.0/">licencia de Creative Commons
                 Reconocimiento-NoComercial-SinObraDerivada 4.0 Internacional</a>.</p>
     </footer>
-</body>
-
 </html>
