--- a/HTML/65.html
+++ b/HTML/65.html
@@ -26,9 +26,11 @@
 
         <h2 class="dino">65</h2>
         <div class="trailer">
-            <video loop="loop" autoplay="autoplay" muted="muted" playsinline="playsinline">
-                <source src="../RESOURCES/Videos/65.mp4" type="video/mp4">
-            </video>
+            <iframe width="100%" height="100%"
+                src="https://www.youtube.com/embed/YeKgkbYSUhA?controls=0&autoplay=1&playlist=YeKgkbYSUhA&showinfo=0&iv_load_policy=3&mute=1&loop=1&disablekb=1&modestbranding=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </div>
         <div class="horarios">
             <section class="descripcionPelicula">
