--- a/HTML/Menus.html
+++ b/HTML/Menus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,40 +24,42 @@
         </div>
 
         <h2>Promociones</h2>
-        <div class="promociones">
-            <div class="carousel">
-                <div class="carouselSlider">
-                    <div class="grupo1">
-                        <img class="" src="../RESOURCES/IMG/promo1.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo2.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo3.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo4.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo5.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo1.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo2.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo3.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo4.jpg" alt="">
-                        <img class="" src="../RESOURCES/IMG/promo5.jpg" alt="">
+        <div class="contenidoPromo">
+            <div class="promociones">
+                <div class="carousel">
+                    <div class="carouselSlider">
+                        <div class="grupo1">
+                            <img class="" src="../RESOURCES/IMG/promo1.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo2.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo3.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo4.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo5.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo1.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo2.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo3.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo4.jpg" alt="">
+                            <img class="" src="../RESOURCES/IMG/promo5.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <h2>Menús</h2>
-        <div class="menus">
-            <div class="carousel">
-                <div class="carouselSlider">
-                    <div class="grupo1">
-                        <img class="" src="../RESOURCES/IMG/Palomitas1.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/Cola1.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/MenuPoP.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/sprite.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/palomitas-5.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/Palomitas1.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/Cola1.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/MenuPoP.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/sprite.gif" alt="">
-                        <img class="" src="../RESOURCES/IMG/palomitas-5.gif" alt="">
+            <h2>Menús</h2>
+            <div class="menus">
+                <div class="carousel">
+                    <div class="carouselSlider">
+                        <div class="grupo1">
+                            <img class="" src="../RESOURCES/IMG/Palomitas1.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/Cola1.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/MenuPoP.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/sprite.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/palomitas-5.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/Palomitas1.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/Cola1.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/MenuPoP.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/sprite.gif" alt="">
+                            <img class="" src="../RESOURCES/IMG/palomitas-5.gif" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -76,4 +79,8 @@
                 href="http://creativecommons.org/licenses/by-nc-nd/4.0/">licencia de Creative Commons
                 Reconocimiento-NoComercial-SinObraDerivada 4.0 Internacional</a>.</p>
     </footer>
+
+
+</body>
+
 </html>
