--- a/HTML/Cartelera.html
+++ b/HTML/Cartelera.html
@@ -12,6 +12,10 @@
 <body>
     <div id="web">
 
+        <div class="apertura">
+            <h1>Abrimos de Miércoles a Domingo</h1>
+        </div>
+
         <div id="head">
             <a class="titulo" href="./Cartelera.html">
                 <h1><img src="../RESOURCES/IMG/La Palma.png" alt="La Palma">Multicines La Palma<img
