--- a/HTML/Contactanos.html
+++ b/HTML/Contactanos.html
@@ -12,6 +12,10 @@
 <body>
     <div id="web">
 
+        <div class="apertura">
+            <h1>Abrimos de Miércoles a Domingo</h1>
+        </div>
+
         <div id="head">
             <a class="titulo" href="./Cartelera.html">
                 <h1><img src="../RESOURCES/IMG/La Palma.png" alt="La Palma">Multicines La Palma<img
@@ -29,14 +33,14 @@
             <form class="formularioContacto" id="miFormulario">
                 <div class="campoFormulario">
                     <input id="nombre" type="text" placeholder=" " title="Introduzca su nombre."
-                    oninvalid="this.setCustomValidity('Debes rellenar este campo para poder ponerte en contacto con nosotros.')" 
-                    oninput="setCustomValidity('')" required>
+                        oninvalid="this.setCustomValidity('Debes rellenar este campo para poder ponerte en contacto con nosotros.')"
+                        oninput="setCustomValidity('')" required>
                     <label for="nombre">Nombre:</label>
                 </div>
                 <div class="campoFormulario">
                     <input id="email" type="email" placeholder=" " pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                         title="Introduzca la dirección de correo a la que queire que le respondamos."
-                        oninvalid="this.setCustomValidity('Debes rellenar este campo para poder ponerte en contacto con nosotros.')" 
+                        oninvalid="this.setCustomValidity('Debes rellenar este campo para poder ponerte en contacto con nosotros.')"
                         oninput="setCustomValidity('')" required>
                     <label for="email">Correo:</label>
                 </div>
@@ -48,7 +52,7 @@
                 <div class="campoFormulario">
                     <textarea id="mensaje" type="text" placeholder=" " title="Introduzca su mensaje."
                         oninvalid="this.setCustomValidity('Debes rellenar este campo para poder ponerte en contacto con nosotros.')"
-                        oninput="setCustomValidity('')"  required></textarea>
+                        oninput="setCustomValidity('')" required></textarea>
                     <label for="mensaje">Mensaje:</label>
                 </div>
                 <button class="enviar">Enviar</button>
@@ -84,7 +88,7 @@
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtbzsqMXJObaR35g_Bs8YdVhPhPxQTSUk&callback=initMap"></script>
     <script src="../JS/maps.js"></script>
-    
+
 </body>
 
 </html>
