--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
     <div id="web">
+        
+        <div class="apertura">
+            <h1>Abrimos de Miércoles a Domingo</h1>
+        </div>
 
         <div id="head">
             <a class="titulo" href="./HTML/Cartelera.html">
