Versión terminada de la web 0.55

--- a/HTML/Cartelera.html
+++ b/HTML/Cartelera.html
@@ -92,6 +92,12 @@
                 </section>
             </div>
         </div>
+        <div id="popup-container" class="visible">
+            <div id="popup-content">
+                <button id="close-btn"><img src="../RESOURCES/IMG/cerrarRojo.png" alt="Cerrar"></button>
+                <img src="../RESOURCES/IMG/Proximamente.png" alt="Imagen noseque">
+            </div>
+        </div>
     </div>
     <footer>
         <p>
@@ -107,6 +113,7 @@
                 href="http://creativecommons.org/licenses/by-nc-nd/4.0/">licencia de Creative Commons
                 Reconocimiento-NoComercial-SinObraDerivada 4.0 Internacional</a>.</p>
     </footer>
+    <script src="../JS/iframe.js"></script>
 </body>
 
 </html>
